--- a/TodoMVP/app/src/main/AndroidManifest.xml
+++ b/TodoMVP/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".addedittask.AddEditTaskActivity" />
         <activity android:name=".tasks.TasksActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
