--- a/TodoMVP/app/build.gradle
+++ b/TodoMVP/app/build.gradle
@@ -10,24 +10,40 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-    }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+
+        buildTypes {
+            release {
+                minifyEnabled false
+                proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            }
+        }
+
+        flavorDimensions "db"
+        productFlavors {
+            sqlite {
+                // Uses SQLiteOpenHelper and traditional SQLite interfaces. Database version 1
+                dimension "db"
+            }
+            room {
+                // Replaces implementation with Room and provides migrations to database version 2
+                dimension "db"
+            }
         }
     }
-}
 
-dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.android.material:material:1.1.0'
-    implementation "com.google.guava:guava:$rootProject.guavaVersion"
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation "junit:junit:$rootProject.junitVersion"
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0-beta01'
+    dependencies {
+        implementation fileTree(dir: 'libs', include: ['*.jar'])
+        implementation 'androidx.appcompat:appcompat:1.1.0'
+        implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+        implementation 'com.google.android.material:material:1.1.0'
+        implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+        implementation "com.google.guava:guava:$rootProject.guavaVersion"
+        implementation "android.arch.persistence.room:runtime:$rootProject.roomVersion"
+        annotationProcessor "android.arch.persistence.room:compiler:$rootProject.roomVersion"
+        androidTestImplementation "android.arch.persistence.room:testing:$rootProject.roomVersion"
+        testImplementation "junit:junit:$rootProject.junitVersion"
+        androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+        androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+        implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0-beta01'
+    }
 }
