--- a/TodoMVP/build.gradle
+++ b/TodoMVP/build.gradle
@@ -28,8 +28,20 @@ task clean(type: Delete) {
 
 // Define versions in a single place
 ext {
+    // Sdk and tools
+    // Support library and architecture components support minSdk 14 and above.
+    minSdkVersion = 21
+    targetSdkVersion = 29
+    compileSdkVersion = 29
+    buildToolsVersion = '29.0.3'
+
     // App dependencies
     guavaVersion = '18.0'
     junitVersion = '4.12'
+    espressoVersion = '3.2.0'
+
     roomVersion = '1.0.0-alpha4'
+    rxjavaVersion = '2.1.3'
+    rxandroidVersion = '2.0.1'
+    sqlbriteVersion = '2.0.0'
 }
