add quotes screen

--- a/SimpleQuotes/app/src/main/AndroidManifest.xml
+++ b/SimpleQuotes/app/src/main/AndroidManifest.xml
@@ -2,8 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.anle.simplequotes">
 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -12,9 +10,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.quotes.Quotes"></activity>
         <activity android:name=".MainActivity" />
-        <activity android:name=".ui.testdatabase.TestDatabaseActivity">
+        <activity
+            android:name=".ui.quotes.QuoteActivity"
+            android:screenOrientation="fullSensor">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
